Upgrade react-native to v0.60.5 (from v0.59.0)
Closes #16

--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -5,24 +5,23 @@
   "scripts": {
     "compile": "tsc -b",
     "prestart": "npm run compile",
-    "start": "concurrently \"npm run compile -- -w\" \"npm run _start\"",
-    "_start": "node ../../node_modules/react-native/local-cli/cli.js start --projectRoot=../../",
-    "test": "jest"
+    "start": "concurrently \"npm run compile -- -w\" \"react-native start\"",
+    "studio": "studio android",
+    "test": "jest",
+    "xcode": "xed ios"
   },
   "dependencies": {
-    "components": "*",
-    "react": "16.8.4",
-    "react-native": "0.59.0"
+    "react": "16.8.6",
+    "react-native": "0.60.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/runtime": "^7.3.4",
-    "babel-jest": "^24.5.0",
-    "concurrently": "*",
-    "jest": "^24.5.0",
-    "metro-react-native-babel-preset": "^0.53.0",
-    "react-test-renderer": "16.8.3",
-    "typescript": "*"
+    "@babel/core": "^7.5.0",
+    "@babel/runtime": "^7.5.0",
+    "@react-native-community/eslint-config": "^0.0.3",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "metro-react-native-babel-preset": "0.54.1",
+    "react-test-renderer": "16.8.6"
   },
   "jest": {
     "preset": "react-native"
