Upgrade to react-native@0.61-rc.2 (from 0.59.0)

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -6,6 +6,10 @@
     "emitDeclarationOnly": true,
     "isolatedModules": false,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "typeRoots": [
+      "@types",
+      "../../node_modules/@types"
+    ]
   }
 }
