--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,10 +16,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
-    "typeRoots": [
-      "@types",
-      "node_modules/@types"
-    ]
+    "strict": true
   }
 }
