--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -3,26 +3,30 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "compile": "tsc -b",
+    "android": "react-native run-android",
+    "compile": "tsc -b --incremental",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
     "prestart": "npm run compile",
-    "start": "concurrently \"npm run compile -- -w\" \"npm run _start\"",
-    "_start": "node ../../node_modules/react-native/local-cli/cli.js start --projectRoot=../../",
-    "test": "jest"
+    "start": "concurrently \"npm run compile -- -w\" \"react-native start\"",
+    "studio": "studio android",
+    "test": "jest",
+    "xcode": "open ios/myprojectname.xcworkspace"
   },
   "dependencies": {
-    "components": "*",
-    "react": "16.8.4",
-    "react-native": "0.59.0"
+    "components": "0.0.1",
+    "react": "16.9.0",
+    "react-native": "0.61.0-rc.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/runtime": "^7.3.4",
-    "babel-jest": "^24.5.0",
-    "concurrently": "*",
-    "jest": "^24.5.0",
-    "metro-react-native-babel-preset": "^0.53.0",
-    "react-test-renderer": "16.8.3",
-    "typescript": "*"
+    "@babel/core": "7.5.5",
+    "@babel/runtime": "7.5.5",
+    "@react-native-community/eslint-config": "0.0.5",
+    "babel-jest": "24.9.0",
+    "eslint": "6.2.2",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.0",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
