--- a/packages/mobile/tsconfig.json
+++ b/packages/mobile/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "noEmit": true
+    "noEmit": true,
+    "typeRoots": [
+      "@types",
+      "../../node_modules/@types"
+    ]
   },
   "include": [
     "index.js",
