--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
+    "typeRoots": [
+      "@types",
+      "../../node_modules/@types"
+    ]
   },
   "include": [
     "src"
