--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "xcode": "yarn workspace mobile xcode"
   },
   "dependencies": {
-    "react-native": "0.61.0-rc.3"
+    "react-native": "0.61.2"
   },
   "devDependencies": {
     "@types/react": "16.9.2",
