--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "components": "0.0.1",
     "react": "16.9.0",
-    "react-native": "0.61.0-rc.3"
+    "react-native": "0.61.2"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
