Fixed issue preventing auto-linking dependencies

--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -39,7 +39,7 @@ target 'myprojectname' do
     # Pods for testing
   end
 
-  use_native_modules!("../../..")
+  use_native_modules!
 end
 
 target 'myprojectname-tvOS' do
