--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "0.0.7",
+    "@testing-library/jest-native": "^3.0.3",
+    "@testing-library/react-native": "^5.0.1",
     "@types/react": "16.9.19",
     "@types/react-native": "0.61.12",
     "babel-jest": "25.1.0",
@@ -29,6 +31,6 @@
     "typescript": "3.7.5"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "@testing-library/react-native"
   }
 }
