--- a/packages/mobile/android/app/build.gradle
+++ b/packages/mobile/android/app/build.gradle
@@ -76,8 +76,8 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "packages/mobile/index.js",
-    root: "../../../../",
+    entryFile: "index.js",
+    root: "../../",
     enableHermes: false,  // clean and rebuild if changing
 ]
 
