--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,13 @@
 {
   "name": "components",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "react": "16.12.0",
+    "react-native": "0.61.5"
+  },
+  "devDependencies": {
+    "@types/react": "16.9.19",
+    "@types/react-native": "0.61.12"
+  }
 }
