--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -7,9 +7,6 @@
     "isolatedModules": false,
     "outDir": "dist",
     "rootDir": "src",
-    "typeRoots": [
-      "@types",
-      "../../node_modules/@types"
-    ]
+    "typeRoots": ["@types", "../../node_modules/@types"]
   }
 }
