--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "android": "yarn workspace mobile android",
     "compile": "tsc -b --incremental",
     "ios": "yarn workspace mobile  ios",
+    "format": "prettier --write .",
     "studio": "yarn workspace mobile studio",
     "test": "yarn workspaces run test",
     "xcode": "yarn workspace mobile xcode"
   },
   "devDependencies": {
+    "prettier": "2.2.0",
     "typescript": "4.1.2"
   }
 }
