Upgrade react-native to v0.63.3
Closes https://github.com/brunolemos/react-native-web-monorepo/issues/57

Closes https://github.com/brunolemos/react-native-web-monorepo/issues/58

Closes https://github.com/brunolemos/react-native-web-monorepo/issues/49

Closes https://github.com/brunolemos/react-native-web-monorepo/issues/41

Closes https://github.com/brunolemos/react-native-web-monorepo/issues/22

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,12 +5,10 @@
   "scripts": {
     "test": "jest --passWithNoTests"
   },
-  "dependencies": {
-    "react": "16.12.0",
-    "react-native": "0.61.5"
-  },
-  "devDependencies": {
-    "@types/react": "16.9.19",
-    "@types/react-native": "0.61.12"
+  "peerDependencies": {
+    "@types/react": "*",
+    "@types/react-native": "*",
+    "react": "*",
+    "react-native": "*"
   }
 }
