Simplify TypeScript setup

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "isolatedModules": false,
-    "outDir": "dist",
-    "rootDir": "src",
-    "typeRoots": ["@types", "../../node_modules/@types"]
-  }
+    "jsx": "preserve",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "noEmit": true,
+    "target": "ESNext"
+  },
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
