Upgrade create-react-app to v4.0.0 (and react-native-web to v0.14.8)

--- a/packages/mobile/tsconfig.json
+++ b/packages/mobile/tsconfig.json
@@ -6,12 +6,6 @@
     "noEmit": true,
     "jsx": "preserve"
   },
-  "include": [
-    "__tests__",
-    "*.js",
-    "**/*.js",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
+  "include": ["__tests__", "*.js", "**/*.js", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
