--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,13 +6,13 @@
     "react": "17.0.1",
     "react-art": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native-web": "0.12.1",
-    "react-scripts": "3.3.1"
+    "react-native-web": "0.14.8",
+    "react-scripts": "4.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jest-environment-jsdom-sixteen",
+    "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
@@ -27,10 +27,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
-    "babel-plugin-react-native-web": "0.12.1",
-    "concurrently": "5.1.0",
-    "jest-environment-jsdom-sixteen": "1.0.3",
-    "react-app-rewired": "2.1.5",
+    "babel-plugin-react-native-web": "0.14.8",
+    "react-app-rewired": "2.1.6",
     "typescript": "4.1.2"
   },
   "jest": {
