--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
   },
   "scripts": {
     "android": "yarn workspace mobile android",
-    "ios": "yarn workspace mobile  ios",
     "format": "prettier --write .",
+    "ios": "yarn workspace mobile  ios",
+    "lint": "eslint .",
     "studio": "yarn workspace mobile studio",
     "test": "yarn workspaces run test",
     "xcode": "yarn workspace mobile xcode"
   },
   "devDependencies": {
+    "@react-native-community/eslint-config": "2.0.0",
+    "@typescript-eslint/eslint-plugin": "4.8.1",
+    "@typescript-eslint/parser": "4.8.1",
+    "eslint": "7.14.0",
+    "eslint-config-airbnb-typescript": "12.0.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.2.0",
     "typescript": "4.1.2"
   }
