Upgrade react-native to v0.64.0-rc.0
https://github.com/brunolemos/react-native-web-monorepo/issues/57\#issuecomment-716739981

https://github.com/react-native-community/releases/issues/214

--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -13,6 +13,10 @@ target 'myprojectname' do
     # Pods for testing
   end
 
+  pre_install do |installer|
+    codegen_pre_install(installer, :path => config[:reactNativePath])
+  end
+
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
@@ -20,14 +24,5 @@ target 'myprojectname' do
   use_flipper!
   post_install do |installer|
     flipper_post_install(installer)
-  end
-end
-
-target 'myprojectname-tvOS' do
-  # Pods for myprojectname-tvOS
-
-  target 'myprojectname-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
   end
 end
