--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -14,16 +14,17 @@
   "dependencies": {
     "components": "0.0.1",
     "react": "17.0.1",
-    "react-native": "0.63.3"
+    "react-native": "0.64.0-rc.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "3.4.3",
     "@testing-library/react-native": "7.1.0",
     "@types/react": "17.0.0",
-    "@types/react-native": "0.63.36",
+    "@types/react-native": "0.63.37",
     "concurrently": "5.3.0",
     "eslint": "7.14.0",
     "metro-react-native-babel-preset": "0.64.0",
+    "react-native-codegen": "0.0.6",
     "react-test-renderer": "17.0.1",
     "typescript": "4.1.2"
   },
